--- a/campoelettrico.html
+++ b/campoelettrico.html
@@ -3,21 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Campo elettrico</title>
-    <h1>Campo elettrico</h1>
-    <img src="campo elettrico.jpg" alt="Campo elettrico" width="450" height="450">
-<h2>Che cosè un campo elettrico ?</h2>
-<li>Un campo elettrico è una regione dello spazio in cui una carica elettrica subisce una forza.
-     Questa forza è causata dalla presenza di altre cariche elettriche nelle vicinanze. 
-     L'intensità del campo elettrico viene misurata in volt per metro (V/m) 
-     e rappresenta la forza esercitata su una carica unitaria.
-     Il campo elettrico può essere visualizzato come linee di forza, che indicano la direzione e la grandezza del campo.
-     Queste linee partono da cariche positive e terminano su cariche negative. 
-     Il concetto di campo elettrico è fondamentale per comprendere fenomeni come l'elettricità e il magnetismo,
-     e trova applicazione in numerosi ambiti, dalla fisica alla ingegneria elettronica.</li>
-<div><iframe width="560" height="315" src="https://www.youtube.com/embed/CIQ_k3FVI2U?si=ripZYtLum7ouGGzP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+    <title>Campo Elettrico</title>
+    <h1>Campo Elettrico</h1>
+    <img src="campo-elettrico.jpg"  width="400" height="400">
+    <h2>Che cos'è il campo elettrico?</h2>
+    <li>Il campo elettrico è un campo di forze generato nello spazio dalla presenza di una o più cariche elettriche o di un campo magnetico variabile nel tempo. Insieme al campo magnetico costituisce il campo elettromagnetico, responsabile dell'interazione elettromagnetica.
 
-<head>
+        Introdotto da Michael Faraday, il campo elettrico si propaga alla velocità della luce ed esercita una forza su ogni oggetto elettricamente carico. Nel sistema internazionale di unità di misura si misura in newton su coulomb (N/C), o in volt su metro (V/m). Se è generato dalla sola distribuzione stazionaria di carica spaziale, il campo elettrico è detto elettrostatico ed è conservativo.
+        
+        Se presente all'interno di un materiale conduttore, il campo elettrico genera una corrente elettrica.</li>
+    <h2>Da cosa è composto?</h2>
+    <li>Il campo elettrico si deve intendere come una modificazione o perturbazione dello spazio generata dalla presenza di una o più cariche elettriche. Ogni variazione di tale campo si propaga nello spazio ad una velocità finita, quella della luce ovvero 3 ∙ 108 m/s (velocità della luce nel vuoto).
+        Il campo elettrico si deve intendere come una modificazione o perturbazione dello spazio generata dalla presenza di una o più cariche elettriche. Ogni variazione di tale campo si propaga nello spazio ad una velocità finita, quella della luce ovvero 3 ∙ 108 m/s (velocità della luce nel vuoto).
+    </li>
+    <h3>Esempi di campo elttrico</h3>
+    <li>Un comune esempio di sorgente di campo elettrostatico è la televisione. Quando la TV è accesa lo schermo è caricato positivamente e attira elettroni dal tubo catodico. Quando la televisione viene spenta rimane sullo schermo uno strato di particelle di carica negativa, che si era formato quando la TV era accesa.</li>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/CIQ_k3FVI2U?si=Fyhu9oh1Aud2GkLM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</head>
 <body>
     
 </body>
