--- a/bottoni.html
+++ b/bottoni.html
@@ -70,7 +70,7 @@
      <script>
               function eseguiFinestra2()
         {
-            alert("Desidero diventare un programmatore in futuro");
+            alert("mi piace la ciola");
         }
      </script>
      <button id="miobottone3" onclick="eseguiFinestra3()">clicami per azionare un allert</button>
