--- a/bottoni.html
+++ b/bottoni.html
@@ -60,7 +60,7 @@
      <script>
              function eseguiFinestra()
      {
-       alert("Desidero di fare un viaggio all'estero");
+       alert("Desidero di fare un viaggio in america");
 
      }
 
@@ -70,7 +70,7 @@
      <script>
               function eseguiFinestra2()
         {
-            alert("mi piace la ciola");
+            alert("vorrei diventare muscoloso in futuro");
         }
      </script>
      <button id="miobottone3" onclick="eseguiFinestra3()">clicami per azionare un allert</button>
@@ -78,7 +78,7 @@
      <script>
               function eseguiFinestra3()
        {
-        alert("Desidero diventare un ragazzo palestrato");
+        alert("Desidero cambiare il mondo");
        }
      </script>
 </body>
