Update and rename schedapersonalev1 to schedapersonalev1.html

--- a/schedapersonalev1.html
+++ b/schedapersonalev1.html
@@ -20,7 +20,7 @@
 			Sul breve termine punto a finire la scuola e diplomarmi. Dopo il diploma mi piacerebbe avviare qualche attività online attorno alle criptovalute<br><br>
 			"Non ho mai sognato il successo. Ho lavorato per ottenerlo"<br>
 			- Estèe Lauder<br>
-			<img src="citazione1.png" alt="Citazione testo"><br>
+			<img src="citazione1." alt="Citazione testo"><br>
 			<img src="citazione2.jpg" width="912" height="614" alt="Successo Grafico">
 		</p>
   </body>
