--- a/schedapersonalev1.html
+++ b/schedapersonalev1.html
@@ -12,7 +12,7 @@
 			<li>Età: <b>15 anni</b></li>
 			<li>Classe e Istituto: <b>2CIT, Maxwell</b></li>
 			<li>Data di nascita: <b>21/08/2009</b></li>
-			<li>Luogo di residenza: <b>Candiolo</b></li>
+			<li>Luogo di residenza: <b>Nichelino</b></li>
 		</ul>
 		<p>
 			Sono Nicolò Giannazzo, sono nato a Moncalieri ma risiedo attualmente a Nichelino, mi piace giocare ai videogiochi specialmente Minecraft e creare server, mi affascina comprendere come funzionano le truffe e giocare a scacchi<br>
