--- a/flipcard.html
+++ b/flipcard.html
@@ -59,7 +59,7 @@ body {
       <img src="foto1.jpg" alt="Avatar" style="width:300px;height:300px;">
     </div>
     <div class="flip-card-back">
-      <h1>Diego semprini</h1>
+      <h1>Nicolò Giannazzo</h1>
       <p>sportivo e studente</p>
       <p>Ragazzo da scoprire</p>
     </div>
@@ -70,7 +70,7 @@ body {
 </html>
 
 <h1>informazioni personali</h1>
-<p>Diego Semprini</p>
+<p>Nicolò Giannazzo</p>
 <p>15 anni</p>
 <p>2° x maxwell</p>
 <p>04/11/24</p>
