--- a/flipcard.html
+++ b/flipcard.html
@@ -73,8 +73,8 @@ body {
 <p>Nicolò Giannazzo</p>
 <p>15 anni</p>
 <p>2° x maxwell</p>
-<p>04/11/24</p>
-<p>candiolo</p>
+<p>21/08/24</p>
+<p>Nichelino</p>
 <h2>Chi sono</h2>
 <p>Sono cresciuto a candiolo la mia qualita è quella di non mollare mai , fin da quando sono piccolo ho una passione per il calcio .</p>
 <h2>Interessi e passioni</h2>
