--- a/flipcard.html
+++ b/flipcard.html
@@ -76,7 +76,7 @@ body {
 <p>21/08/24</p>
 <p>Nichelino</p>
 <h2>Chi sono</h2>
-<p>Sono cresciuto a candiolo la mia qualita è quella di non mollare mai , fin da quando sono piccolo ho una passione per il calcio .</p>
+<p>Sono cresciuto a Nichelino la mia qualita è quella di non mollare mai , fin da quando sono piccolo ho una passione per il calcio .</p>
 <h2>Interessi e passioni</h2>
 <ul>
 <li>la mia passione principale è il calcio e pratico questo spoirt due volte a settimana più unìa partita nel fine settimana.</li>
