--- a/css.html
+++ b/css.html
@@ -143,7 +143,7 @@
     <div  id="miascatola1">
     <div  id="miascatola5">
 
-    <img src="foto1.jpg" alt="foto1" width="150" height="125">
+    <img src="foto1.1jpg" alt="foto1" width="150" height="125">
     </div>
     <div  id="miascatola6">
 
