--- a/menu.html
+++ b/menu.html
@@ -164,7 +164,7 @@ body {
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 <div class="Nicolò">
-  <h2>Nicolò Giannazzop</h2>
+  <h2>Nicolò Giannazzo</h2>
 </div>
 
 <script>
