--- a/menudrop.html
+++ b/menudrop.html
@@ -187,7 +187,7 @@ body {
         <a href="https://nicologioannazzo.github.io/sta/js4.html">js4</a>
     </div>
   </div>
-  <a href="https://nicologioannazzo.github.io/sta/schedapersonalev1.html">">Autore: Gabriele</a>
+  <a href="https://nicologioannazzo.github.io/sta/schedapersonalev1.html">">Autore: Nicolò</a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 
