--- a/menudrop.html
+++ b/menudrop.html
@@ -181,7 +181,7 @@ body {
       <i class="fa fa-caret-down"></i>
     </button>
   </div>
-  <a href="https://nicologioannazzo.github.io/sta/schedapersonalev1.html">">Autore: Nicolò</a>
+  <a href="https://nicologioannazzo.github.io/sta/schedapersonalev1.html">Autore: Nicolò</a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 <div class="nico">
