--- a/menudrop.html
+++ b/menudrop.html
@@ -174,14 +174,15 @@ body {
              
       </div>
     </div> 
-  <a href="#about">About</a>
+  <a href="#about"></a>
   </div>
   <div class="dropdown">
-    <button class="dropbtn">js 
-      <i class="fa fa-caret-down"></i>
+    <button class="dropbtn">
+      
     </button>
-  </div>
-  <a href="https://nicologioannazzo.github.io/sta/schedapersonalev1.html">Autore: Nicolò</a>
+ 
+</div>
+<a href="https://nicologioannazzo.github.io/sta/schedapersonalev1.html">Autore: Nicolò</a>
   <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 <div class="nico">
