--- a/css.html
+++ b/css.html
@@ -143,7 +143,7 @@
     <div  id="miascatola1">
     <div  id="miascatola5">
 
-    <img src="foto1.1jpg" alt="foto1" width="150" height="125">
+    <img src="lettore.jpg" alt="foto1" width="150" height="125">
     </div>
     <div  id="miascatola6">
 
@@ -160,7 +160,7 @@
     <div id="miascatola2">
     <div id="miascatola7">
 
-    <img src="foto2.jpg" alt="foto2"  width="150" height="125">
+    <img src="ventola.jpg" alt="foto2"  width="150" height="125">
 
     </div>
     <div id="miascatola8">
@@ -178,7 +178,7 @@
     <div id="miascatola9">
 
      
-    <img src="foto3.jpg" alt="foto3"  width="150" height="125">
+    <img src="ventolone.jpg" alt="foto3"  width="150" height="125">
 
     </div>
     <div id="miascatola10">
@@ -193,7 +193,7 @@
     <div id="miascatola4">
     <div id="miascatola11">
 
-    <img src="foto4.jpg" alt="foto4" width="150" height="125">
+    <img src="hard.jpg" alt="foto4" width="150" height="125">
 
     </div>
     <div id="miascatola12">
